--- a/templates/index.html
+++ b/templates/index.html
@@ -19,24 +19,27 @@
     <div class="main">
       <nav>
         <ul>
-            <li><a href="{{ url_for('grayscale') }}">Lọc xám</a></li>
-            <li><a href="{{ url_for('negative') }}">Lọc âm bản</a></li>
-          <li><a href="{{ url_for('mean_filtering') }}">Lọc trung bình</a></li>
-          <li><a href="{{ url_for('median_filtering') }}">Lọc trung vị</a></li>
-          <li><a href="{{ url_for('gaussian') }}">Thuật toán Gaussian</a></li>
-          <li><a href="{{ url_for('laplacian') }}">Thuật toán Laplacian</a></li>
-          <li><a href="{{ url_for('prewitt') }}">Thuật toán Prewitt</a></li>
-          <li><a href="{{ url_for('threshold') }}">Thuật toán Threshold</a></li>
-          <li><a href="{{ url_for('sobel') }}">Thuật toán Sobel</a></li>
-          <li><a href="{{ url_for('histogram') }}">Thuật toán histogram</a></li>
-          <li><a href="{{ url_for('weighted_average') }}">Thuật toán weighted_average</a></li> 
-          <li><a href="{{ url_for('knn_average') }}">Thuật toán knn_average</a></li>
-          <li><a href="{{ url_for('roberts') }}">Thuật toán roberts</a></li>
-          <li><a href="{{ url_for('canny') }}">Thuật toán canny</a></li>
-           <li><a href="{{ url_for('otsu') }}">Thuật toán otsu</a></li>
-          <li><a href="{{ url_for('dilation') }}">Thuật toán dilation</a></li>
-          <li><a href="{{ url_for('opening') }}">Thuật toán opening</a></li> 
-          <li><a href="{{ url_for('closing') }}">Thuật toán closing</a></li> 
+          <li><a href="{{ url_for('grayscale') }}">1.Lọc xám</a></li>
+          <li><a href="{{ url_for('negative') }}">2.Lọc âm bản</a></li>
+          <li><a href="{{ url_for('mean_filtering') }}">3.Lọc trung bình</a></li>
+          <li><a href="{{ url_for('median_filtering') }}">4.Lọc trung vị</a></li>
+          <li><a href="{{ url_for('gaussian') }}">5.Thuật toán Gaussian</a></li>
+          <li><a href="{{ url_for('laplacian') }}">6.Thuật toán Laplacian</a></li>
+          <li><a href="{{ url_for('prewitt') }}">7.Thuật toán Prewitt</a></li>
+          <li><a href="{{ url_for('threshold') }}">8.Thuật toán Threshold</a></li>
+          <li><a href="{{ url_for('sobel') }}">9.Thuật toán Sobel</a></li>
+          <li><a href="{{ url_for('histogram') }}">10.Thuật toán histogram</a></li>
+          <li><a href="{{ url_for('weighted_average') }}">11.Thuật toán weighted_average</a></li> 
+          <li><a href="{{ url_for('knn_average') }}">12.Thuật toán knn_average</a></li>
+          <li><a href="{{ url_for('roberts') }}">13.Thuật toán roberts</a></li>
+          <li><a href="{{ url_for('canny') }}">14.Thuật toán canny</a></li>
+           <li><a href="{{ url_for('otsu') }}">15.Thuật toán otsu</a></li>
+          <li><a href="{{ url_for('dilation') }}">16.Thuật toán dilation</a></li>
+          <li><a href="{{ url_for('opening') }}">17.Thuật toán opening</a></li> 
+          <li><a href="{{ url_for('closing') }}">18.Thuật toán closing</a></li>  
+          <li><a href="{{ url_for('logarithm') }}">19.Thuật toán logarithm</a></li>
+          <li><a href="{{ url_for('gamma') }}">20.Thuật toán gamma</a></li>
+          <li><a href="{{ url_for('balance') }}">21.Thuật toán balance</a></li>
         </ul>
       </nav>
       <div class="flex flex-column">
