--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-size: 18px;
 }
 h1{
   text-align: center;
@@ -52,6 +53,7 @@ a{
 }
 p{
   margin: 8px 0;
+  font-size: 20px;
 }
 img{
   display: inline-block;
