--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <h1>Xử lý ảnh</h1>
     <p class="font-large">Họ tên: <strong>Trần Minh Nghĩa</strong></p>
     <p class="font-large">Mã sinh viên: <strong>B20DCCN471</strong></p>
-    <p class="font-large">Github: <a href="https://github.com/MinhNghiaTran01/Image_Preprocessing" style="text-decoration: underline;">https://github.com/kuroshiro1902</a></p>
+    <p class="font-large">Github: <a href="https://github.com/MinhNghiaTran01/Image_Preprocessing" style="text-decoration: underline;">https://github.com/MinhNghiaTran01/Image_Preprocessing</a></p>
     <div class="main">
       <nav>
         <ul>
